k3s/cluster/applications/radarr/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: lapi
      containers:
        - name: radarr
          image: linuxserver/radarr:6.3.0@sha256:fe051413dfd91b383ba04910552e83fb0306895fefee275c48dafe7bb90807dc
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 180
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          hostPath:
            path: /mlem/media
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: http
  selector:
    app: radarr
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr-policy
spec:
  podSelector:
    matchLabels:
      app: radarr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: seerr
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - protocol: TCP
          port: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    tailscale.com/hostname: "radarr"
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: radarr
      port:
        number: 7878
  tls:
    - hosts:
        - radarr
